--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     xhr.setRequestHeader("Content-Type", "application/json");
     xhr.send("{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"}");
   };
-  submitRequest();
+  submitReq();
 </script>
 </body>
 </html>
+
 
 
 
